--- a/caseandexplain.html
+++ b/caseandexplain.html
@@ -22,7 +22,7 @@
             <h3 class="sidebar-header">Giới Thiệu</h3>
             <ul class="sidebar-list">
                 <li><a href="lua.html">LUA là gì</a></li>
-                <li><a href="caseandexplain.html">Ví Dụ Cơ Bản Và Giải Thích</a></li>
+                <li><a href="caseandexplain.html">Những Ví Dụ Cơ Bản Và Giải Thích</a></li>
             </ul>
         </nav>
         <div class="content">
