--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
                 <li><a href="scriptaccess.html">Cách Truy Cập Script</a></li>
                 <li><a href="editscript.html">Cách Chỉnh Sửa Kịch Bản</a></li>
             </ul>
+            <h3 class="sidebar-header">Giới Thiệu</h3>
+            <ul class="sidebar-list">
+                <li><a href="lua.html">LUA là gì</a></li>
+                <li><a href="caseandexplain.html">Những Ví Dụ Cơ Bản Và Giải Thích</a></li>
+            </ul>
         </nav>
         <div class="content">
             <section id="home">
