--- a/lua.html
+++ b/lua.html
@@ -9,19 +9,24 @@
     
 </head>
 <body>
-    <div class="container">
-        <nav class="sidebar">
-            <div class="sidebar-header">
-                <button class="toggle-btn">☰</button>
-                <h2 class="menu-title">Menu</h2>
-            </div>
-            <h3 class="sidebar-header">Hướng Dẫn Cơ Bản</h3>
-            <ul class="sidebar-list">
-                <li><a href="scriptaccess.html">Cách Truy Cập Script</a></li>
-                <li><a href="editscript.html">Cách Chỉnh Sửa Kịch Bản</a></li>
-            </ul>
-        </nav>
-        <div class="content">
+  <div class="container">
+    <nav class="sidebar">
+      <div class="sidebar-header">
+          <button class="toggle-btn">☰</button>
+          <h2 class="menu-title">Menu</h2>
+      </div>
+      <h3 class="sidebar-header">Hướng Dẫn Cơ Bản</h3>
+      <ul class="sidebar-list">
+          <li><a href="scriptaccess.html">Cách Truy Cập Script</a></li>
+          <li><a href="editscript.html">Cách Chỉnh Sửa Kịch Bản</a></li>
+      </ul>
+      <h3 class="sidebar-header">Giới Thiệu</h3>
+      <ul class="sidebar-list">
+          <li><a href="lua.html">LUA là gì</a></li>
+          <li><a href="caseandexplain.html">Những Ví Dụ Cơ Bản Và Giải Thích</a></li>
+      </ul>
+  </nav>
+    <div class="content">
             <h1>Giới thiệu về Lua Programming</h1>
             <h2>Lua là gì?</h2>
             <p>Lua là một ngôn ngữ lập trình kịch bản nhẹ, được thiết kế để dễ học và sử dụng. Nó được tạo ra bởi Roberto Ierusalimschy, Luiz Henrique de Figueiredo và Waldemar Celes ở PUC-Rio (Pontifícia Universidade Católica do Rio de Janeiro) ở Brazil vào năm 1993.</p>
