--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
             </section>
 
             <section id="services">
-                <h1>Liên Hệ Tại</h1>
-                <h5><a href="https://www.facebook.com/profile.php?id=100092733320927">Facebook</a></h5>
+                <h1>Liên Hệ Tại <a href="https://www.facebook.com/profile.php?id=100092733320927">Facebook</a></h1>
             </section>
             <section id="feedback">
                 <h1>Góp Ý Tại</h1>
