--- a/scriptaccess.html
+++ b/scriptaccess.html
@@ -21,7 +21,7 @@
             </ul>
             <h3 class="sidebar-header">Giới Thiệu</h3>
             <ul class="sidebar-list">
-                <li><a href="lua.html">LUA là gì</a></li>
+                <li><a href="lua.html">LUA Là Gì</a></li>
                 <li><a href="caseandexplain.html">Những Ví Dụ Cơ Bản Và Giải Thích</a></li>
             </ul>
         </nav>
@@ -53,4 +53,6 @@
         </div>
     </div>
 </body>
+<script src="sidebar.js"></script>
+
 </html>
