--- a/caseandexplain.html
+++ b/caseandexplain.html
@@ -22,8 +22,8 @@
             <h3 class="sidebar-header">Giới Thiệu</h3>
             <ul class="sidebar-list">
                 <li><a href="lua.html">LUA Là Gì</a></li>
-                <li><a href="caseandexplain.html">Những Ví Dụ Cơ Bản Và Giải Thích</a></li>
-                <li><a href="advancedcase.html">Những Ví Dụ Nâng Cao Về Lua</a></li>
+                <li><a href="caseandexplain.html">Ví Dụ Cơ Bản Và Giải Thích</a></li>
+                <li><a href="advancedcase.html">Ví Dụ Về Các Chức Năng Của LUA</a></li>
             </ul>
         </nav>
         <div class="content">
