--- a/luacase.html
+++ b/luacase.html
@@ -23,7 +23,7 @@
             <ul class="sidebar-list">
                 <li><a href="lua.html">LUA Là Gì</a></li>
                 <li><a href="caseandexplain.html">Ví Dụ Cơ Bản Và Giải Thích</a></li>
-                <li><a href="advancedcase.html">Ví Dụ Về Các Chức Năng Của LUA</a></li>
+                <li><a href="luacase.html">Ví Dụ Về Các Chức Năng Của LUA</a></li>
             </ul>
         </nav>
         <div class="content">
