--- a/mwapi.html
+++ b/mwapi.html
@@ -23,67 +23,50 @@
             <ul class="sidebar-list">
                 <li><a href="lua.html">LUA Là Gì</a></li>
                 <li><a href="caseandexplain.html">Ví Dụ Cơ Bản Và Giải Thích</a></li>
-                <li><a href="advancedcase.html">Ví Dụ Về Các Chức Năng Của LUA</a></li>
+                <li><a href="luacase.html">Ví Dụ Về Các Chức Năng Của LUA</a></li>
             </ul>
-            <h3 class="sidebar-header">Mini World API</h3>
+            <h3 class="sidebar-header">Script</h3>
             <ul class="sidebar-list">
-                <li><a href=mwapi.html></a></li>
+                <li><a href="scriptwork.html">Script Hoạt Động Như Thế Nào</a></li>
+                <li><a href="mwapi.html">Mini World API</a></li>
+                <ul>
+                    <li class="sidebar-small-list"><a href="event.html">Sự Kiện</a></li>
+                </ul>
             </ul>
         </nav>
         <div class="content">
             <section id="home">
-                <h1>Ví Dụ Về Các Chức Năng Của LUA</h1>
-                <div>Trong Script LUA Hàm (<a href="lua.html">Function</a>)vô cùng quan trọng</div>
-                    <li>Hàm có thể có tên gọi bất kì. Ví dụ như a() b() miniworld() đều được chấp nhận.</li>
-                    <li>Hàm có thể được tạo khi dùng <x><span class="keyword">function()</span></x></li>
-                    <li>Cách để tạo Hàm mới
-                        <div class="code-block">
-                        <pre><code>abc = <span class="keyword">function</span>()<span class="comment">   -- Tạo Hàm Có Tên Gọi Là abc</span>
-<span class="comment">-- Chỉnh Sửa Hàm Tại Đây</span>
-<span class="keyword">end</span></code></pre>
-                    
-                        </div>
-                    </li>
-                    <li>Cách để chạy hàm</li>
-                    <div class="code-block">
-                        <pre><code>abc = <span class="keyword">function</span>()<span class="comment">   -- Tạo Hàm Có Tên Gọi Là abc</span>
-<span class="comment">-- Chỉnh Sửa Hàm Tại Đây</span>
-<span class="keyword">end</span>
-<span class="api">abc()</span></code></pre>
-                    </div>
-                <h9>Sau đây là một vài ví dụ sử dụng hàm của LUA</h9>  
-                <li>Ví dụ 1: Đặt 3 khối đất trước mặt người chơi. Khi người chơi bắt đầu đào block đất thì block sẽ bị thay thế bởi block đá.</li>
-                    <div class="code-block">
-                        <pre><code><span class ="keyword">local</span> <span>face = FACE_DIRECTION.DIR_POS_Y
-GameStart = </span><span class="keyword">function</span><span>()</span>
-    <span class="keyword">local </span><span>ret1, playerID = Player:getMainPlayerUin()</span>
-    <span class="comment">-- Khi Game Bắt Đầu Thì Đặt Các Block Xung Quanh Người Chơi</span>
-    <span class="keyword">local </span><span>ret2, x, y, z = Player:getPosition(playerId)
-    Block:replaceBlock(<span class="value">101</span>, x+1, y, z, face)
-    Block:replaceBlock(<span class="value">101</span>, x, y, z+1, face)
-    Block:replaceBlock(<span class="value">101</span>, x-1, y, z-1, face)</span>
-<span class="keyword">end</span>
-<span>ScriptSupportEvent:registerEvent(</span><span class="math">[=[Game.Start]=]</span><span>, Game_Start)</span>
-<span class="comment">-- Sự Kiện Game.Start Sẽ Kích Hoạt Khi Trò Chơi Bắt Đầu Do Đó Hàm Game_Start Sẽ Chạy Khi Game Bắt Đầu</span>
-
-<span>Block_Removed = </span><span class="keyword">function</span><span>(event_args)</span>
-    <span class="keyword">local</span> xPos = event_args[<span class="string">'x'</span>]
-    <span class="keyword">local</span> yPos = event_args[<span class="string">'y'</span>]
-    <span class="keyword">local</span> zPos = event_args[<span class="string">'z'</span>]
-    <span class="keyword">local</span> blockid = event_args[<span class="string">'blockid'</span>]
-    <span class="keyword">if</span> blockid == <span class="value">101</span> <span class="keyword">then</span>   -- Kiểm Tra Khối Bị Đào Có Phải Khối Đất
-        <span>Block:replaceBlock(<span class="value">104</span>, xPos, yPos, zPos, face)</span>
-    <span class="keyword">end</span>
-<span class="keyword">end</span>
-<span>ScriptSupportEvent:registerEvent(<span class="math">[=[Block.Remove]=]</span>, Block_Removed)</span></code></pre>
-                    </div>
-                <li>Ví Dụ 2: Nhắn Tới Tất Cả Người Chơi Trong Phòng: Xin Chào, Mini World</li>
-                <div class="code-block">
-                    <pre><code>GameStart = </span><span class="keyword">function</span><span>()</span>
-    <span>Chat:sendChat(<span class="string">"Xin Chào, Mini World"</span>)</span><span class="comment">   -- Chữ Được Chat Có Màu Trắng Và Có Tên Người Chơi</span>
-    <span>Chat:sendSystemMSG(<span class="string">"Xin Chào, Mini World"</span>)</span><span class="comment">   -- Chữ Được Chat Có Màu Cam Và Không Có Tên Người Chơi</span>
-<span class="keyword">end</span>
-<span>ScriptSupportEvent:registerEvent(</span><span class="math">[=[Game.Start]=]</span><span>, Game_Start)</span></code></pre></div>
+                <h1>Mini World API</h1>
+                <ul>
+                    <li><div><a href="event.html">Sự Kiện</a></div></li>
+                    <li><div><a href="gamerule.html">Quy Tắc Thế Giới</a></div></li>
+                    <li><div><a href="world.html">Quản Lí Thế Giới</a></div></li>
+                    <li><div><a href="game.html">Quản Lí Trò Chơi</a></div></li>
+                    <li><div><a href="block.html">Quản Lí Khối</a></div></li>
+                    <li><div><a href="buff.html">Quản Lí Trạng Thái</a></div></li>
+                    <li><div><a href="actor.html">Quản Lí Sinh Vật</a></div></li>
+                    <li><div><a href="player.html">Quản Lí Người Chơi</a></div></li>
+                    <li><div><a href="creature.html">Quản Lí Sinh Vật</a></div></li>
+                    <li><div><a href="ui.html">Quản Lí Giao Diện UI</a></div></li>
+                    <li><div><a href="area.html">Quản Lí Khu Vực</a></div></li>
+                    <li><div><a href="chat.html">Quản Lí Chat</a></div></li>
+                    <li><div><a href="team.html">Quản Lí Đội</a></div></li>
+                    <li><div><a href="item.html">Quản Lí Vật Phẩm</a></div></li>
+                    <li><div><a href="backpack.html">Quản Lí Túi Đồ</a></div></li>
+                    <li><div><a href="objectlib.html">Quản Lí Đối Tượng</a></div></li>
+                    <li><div><a href="varlib2.html">Quản Lí Biến</a></div></li>
+                    <li><div><a href="worldcontainer.html">Quản Lí Thùng Chứa</a></div></li>
+                    <li><div><a href=""></a></div></li>
+                    <li><div><a href=""></a></div></li>
+                    <li><div><a href=""></a></div></li>
+                    <li><div><a href=""></a></div></li>
+                    <li><div><a href=""></a></div></li>
+                    <li><div><a href=""></a></div></li>
+                    <li><div><a href=""></a></div></li>
+                    <li><div><a href=""></a></div></li>
+                </ul>
+            </section>
+        </div>
     </div>
     <script src="sidebar.js"></script>
     <script src="copy.js"></script>
