--- a/mwapi.html
+++ b/mwapi.html
@@ -31,6 +31,32 @@
                 <li><a href="mwapi.html">Mini World API</a></li>
                 <ul>
                     <li class="sidebar-small-list"><a href="event.html">Sự Kiện</a></li>
+                    <li class="sidebar-small-list"><a href="gamerule.html">Quy Luật Thế Giới</a></li>
+                    <li class="sidebar-small-list"><a href="world.html">Quản Lí Thế Giới</a></li>
+                    <li class="sidebar-small-list"><a href="game.html">Quản Lí Trò Chơi</a></li>
+                    <li class="sidebar-small-list"><a href="block.html">Quản Lí Khối</a></li>
+                    <li class="sidebar-small-list"><a href="buff.html">Quản Lí Trạng Thái</a></li>
+                    <li class="sidebar-small-list"><a href="actor.html">Quản Lí Thực Thể/Actor Management Interface(Cần Góp Ý Dịch)</a></li>
+                    <li class="sidebar-small-list"><a href="player.html">Quản Lí Người Chơi</a></li>
+                    <li class="sidebar-small-list"><a href="creature.html">Quản Lí Sinh Vật</a></li>
+                    <li class="sidebar-small-list"><a href="ui.html">Quản Lí Giao Diện UI</a></li>
+                    <li class="sidebar-small-list"><a href="area.html">Quản Lí Khu Vực</a></li>
+                    <li class="sidebar-small-list"><a href="chat.html">Quản Lí Chat</a></li>
+                    <li class="sidebar-small-list"><a href="team.html">Quản Lí Đội</a></li>
+                    <li class="sidebar-small-list"><a href="item.html">Quản Lí Vật Phẩm</a></li>
+                    <li class="sidebar-small-list"><a href="backpack.html">Quản Lí Túi Đồ</a></li>
+                    <li class="sidebar-small-list"><a href="objectlib.html">Quản Lí Đối Tượng</a></li>
+                    <li class="sidebar-small-list"><a href="varlib2.html">Quản Lí Biến</a></li>
+                    <li class="sidebar-small-list"><a href="worldcontainer.html">Quản Lí Vật Chứa/Container Management Interface(Cần Góp Ý Dịch)</a></li>
+                    <li class="sidebar-small-list"><a href="mapmark.html">Quản Lí Đánh Dấu Thế Giới/Minimap Management Interface(Cần Góp Ý Dịch)(Không Hoạt Động)</a></li>
+                    <li class="sidebar-small-list"><a href="spawnport.html">Quản Lí Điểm Hồi Sinh</a></li>
+                    <li class="sidebar-small-list"><a href="timer.html">Quản Lí Bộ Đếm Giờ</a></li>
+                    <li class="sidebar-small-list"><a href="graphic.html">Quản Lí Đồ Họa/Graphics and text information management interface(Không Hoạt Động)</a></li>
+                    <li class="sidebar-small-list"><a href="listenparam.html">Function monitoring management interface</a></li>
+                    <li class="sidebar-small-list"><a href="valuegroup.html">Quản Lí Nhóm Biến</a></li>
+                    <li class="sidebar-small-list"><a href="costomui.html">Quản Lí UI</a></li>
+                    <li class="sidebar-small-list"><a href="displayboard.html">Quản Lí Bảng Hiện Thị</a></li>
+                    <li class="sidebar-small-list"><a href="cloudsever.html">Quản Lí Máy Chủ Đám Mây</a></li>
                 </ul>
             </ul>
         </nav>
@@ -39,12 +65,12 @@
                 <h1>Mini World API</h1>
                 <ul>
                     <li><div><a href="event.html">Sự Kiện</a></div></li>
-                    <li><div><a href="gamerule.html">Quy Tắc Thế Giới</a></div></li>
+                    <li><div><a href="gamerule.html">Quy Luật Thế Giới</a></div></li>
                     <li><div><a href="world.html">Quản Lí Thế Giới</a></div></li>
                     <li><div><a href="game.html">Quản Lí Trò Chơi</a></div></li>
                     <li><div><a href="block.html">Quản Lí Khối</a></div></li>
                     <li><div><a href="buff.html">Quản Lí Trạng Thái</a></div></li>
-                    <li><div><a href="actor.html">Quản Lí Sinh Vật</a></div></li>
+                    <li><div><a href="actor.html">Quản Lí Thực Thể/Actor Management Interface(Cần Góp Ý Dịch)</a></div></li>
                     <li><div><a href="player.html">Quản Lí Người Chơi</a></div></li>
                     <li><div><a href="creature.html">Quản Lí Sinh Vật</a></div></li>
                     <li><div><a href="ui.html">Quản Lí Giao Diện UI</a></div></li>
@@ -55,15 +81,16 @@
                     <li><div><a href="backpack.html">Quản Lí Túi Đồ</a></div></li>
                     <li><div><a href="objectlib.html">Quản Lí Đối Tượng</a></div></li>
                     <li><div><a href="varlib2.html">Quản Lí Biến</a></div></li>
-                    <li><div><a href="worldcontainer.html">Quản Lí Thùng Chứa</a></div></li>
-                    <li><div><a href=""></a></div></li>
-                    <li><div><a href=""></a></div></li>
-                    <li><div><a href=""></a></div></li>
-                    <li><div><a href=""></a></div></li>
-                    <li><div><a href=""></a></div></li>
-                    <li><div><a href=""></a></div></li>
-                    <li><div><a href=""></a></div></li>
-                    <li><div><a href=""></a></div></li>
+                    <li><div><a href="worldcontainer.html">Quản Lí Vật Chứa/Container Management Interface(Cần Góp Ý Dịch)</a></div></li>
+                    <li><div><a href="mapmark.html">Quản Lí Đánh Dấu Thế Giới/Minimap Management Interface(Cần Góp Ý Dịch)(Không Hoạt Động)</a></div></li>
+                    <li><div><a href="spawnport.html">Quản Lí Điểm Hồi Sinh</a></div></li>
+                    <li><div><a href="timer.html">Quản Lí Bộ Đếm Giờ</a></div></li>
+                    <li><div><a href="graphic.html">Quản Lí Đồ Họa/Graphics and text information management interface(Không Hoạt Động)</a></div></li>
+                    <li><div><a href="listenparam.html">Function monitoring management interface</a></div></li>
+                    <li><div><a href="valuegroup.html">Quản Lí Nhóm Biến</a></div></li>
+                    <li><div><a href="costomui.html">Quản Lí UI</a></div></li>
+                    <li><div><a href="displayboard.html">Quản Lí Bảng Hiện Thị</a></div></li>
+                    <li><div><a href="cloudsever.html">Quản Lí Máy Chủ Đám Mây</a></div></li>
                 </ul>
             </section>
         </div>
