--- a/event.html
+++ b/event.html
@@ -32,38 +32,33 @@
                 <li><a href="scriptwork.html">Script Hoạt Động Như Thế Nào</a></li>
                 <li><a href="mwapi.html">Mini World API</a></li>
                 <ul>
-                    <li class="sidebar-small-list"><a href="event.html">Sự Kiện</a></li>
-                    <li class="sidebar-small-list"><a href="gamerule.html">Quy Luật Thế Giới</a></li>
-                    <li class="sidebar-small-list"><a href="world.html">Quản Lí Thế Giới</a></li>
-                    <li class="sidebar-small-list"><a href="game.html">Quản Lí Trò Chơi</a></li>
-                    <li class="sidebar-small-list"><a href="block.html">Quản Lí Khối</a></li>
-                    <li class="sidebar-small-list"><a href="buff.html">Quản Lí Trạng Thái</a></li>
-                    <li class="sidebar-small-list"><a href="actor.html">Quản Lí Thực Thể/Actor Management Interface(Cần
-                            Góp Ý Dịch)</a></li>
-                    <li class="sidebar-small-list"><a href="player.html">Quản Lí Người Chơi</a></li>
-                    <li class="sidebar-small-list"><a href="creature.html">Quản Lí Sinh Vật</a></li>
-                    <li class="sidebar-small-list"><a href="ui.html">Quản Lí Giao Diện UI</a></li>
-                    <li class="sidebar-small-list"><a href="area.html">Quản Lí Khu Vực</a></li>
-                    <li class="sidebar-small-list"><a href="chat.html">Quản Lí Chat</a></li>
-                    <li class="sidebar-small-list"><a href="team.html">Quản Lí Đội</a></li>
-                    <li class="sidebar-small-list"><a href="item.html">Quản Lí Vật Phẩm</a></li>
-                    <li class="sidebar-small-list"><a href="backpack.html">Quản Lí Túi Đồ</a></li>
-                    <li class="sidebar-small-list"><a href="objectlib.html">Quản Lí Đối Tượng</a></li>
-                    <li class="sidebar-small-list"><a href="varlib2.html">Quản Lí Biến</a></li>
-                    <li class="sidebar-small-list"><a href="worldcontainer.html">Quản Lí Vật Chứa/Container Management
-                            Interface(Cần Góp Ý Dịch)</a></li>
-                    <li class="sidebar-small-list"><a href="mapmark.html">Quản Lí Đánh Dấu Thế Giới/Minimap Management
-                            Interface(Cần Góp Ý Dịch)(Không Hoạt Động)</a></li>
-                    <li class="sidebar-small-list"><a href="spawnport.html">Quản Lí Điểm Hồi Sinh</a></li>
-                    <li class="sidebar-small-list"><a href="timer.html">Quản Lí Bộ Đếm Giờ</a></li>
-                    <li class="sidebar-small-list"><a href="graphic.html">Quản Lí Đồ Họa/Graphics and text information
-                            management interface(Không Hoạt Động)</a></li>
-                    <li class="sidebar-small-list"><a href="listenparam.html">Function monitoring management
-                            interface</a></li>
-                    <li class="sidebar-small-list"><a href="valuegroup.html">Quản Lí Nhóm Biến</a></li>
-                    <li class="sidebar-small-list"><a href="costomui.html">Quản Lí UI</a></li>
-                    <li class="sidebar-small-list"><a href="displayboard.html">Quản Lí Bảng Hiện Thị</a></li>
-                    <li class="sidebar-small-list"><a href="cloudsever.html">Quản Lí Máy Chủ Đám Mây</a></li>
+                    <li><a href="event.html">Sự Kiện</a></li>
+                    <li><a href="gamerule.html">Quy Luật Thế Giới</a></li>
+                    <li><a href="world.html">Quản Lí Thế Giới</a></li>
+                    <li><a href="game.html">Quản Lí Trò Chơi</a></li>
+                    <li><a href="block.html">Quản Lí Khối</a></li>
+                    <li><a href="buff.html">Quản Lí Trạng Thái</a></li>
+                    <li><a href="actor.html">Quản Lí Thực Thể/Actor Management Interface(Cần Góp Ý Dịch)</a></li>
+                    <li><a href="player.html">Quản Lí Người Chơi</a></li>
+                    <li><a href="creature.html">Quản Lí Sinh Vật</a></li>
+                    <li><a href="ui.html">Quản Lí Giao Diện UI</a></li>
+                    <li><a href="area.html">Quản Lí Khu Vực</a></li>
+                    <li><a href="chat.html">Quản Lí Chat</a></li>
+                    <li><a href="team.html">Quản Lí Đội</a></li>
+                    <li><a href="item.html">Quản Lí Vật Phẩm</a></li>
+                    <li><a href="backpack.html">Quản Lí Túi Đồ</a></li>
+                    <li><a href="objectlib.html">Quản Lí Đối Tượng</a></li>
+                    <li><a href="varlib2.html">Quản Lí Biến</a></li>
+                    <li><a href="worldcontainer.html">Quản Lí Vật Chứa/Container Management Interface(Cần Góp Ý Dịch)</a></li>
+                    <li><a href="mapmark.html">Quản Lí Đánh Dấu Thế Giới/Minimap Management Interface(Cần Góp Ý Dịch)(Không Hoạt Động)</a></li>
+                    <li><a href="spawnport.html">Quản Lí Điểm Hồi Sinh</a></li>
+                    <li><a href="timer.html">Quản Lí Bộ Đếm Giờ</a></li>
+                    <li><a href="graphic.html">Quản Lí Đồ Họa/Graphics and text information management interface(Không Hoạt Động)</a></li>
+                    <li><a href="listenparam.html">Function monitoring managementinterface</a></li>
+                    <li><a href="valuegroup.html">Quản Lí Nhóm Biến</a></li>
+                    <li><a href="costomui.html">Quản Lí UI</a></li>
+                    <li><a href="displayboard.html">Quản Lí Bảng Hiện Thị</a></li>
+                    <li><a href="cloudsever.html">Quản Lí Máy Chủ Đám Mây</a></li>
                 </ul>
             </ul>
         </nav>
