--- a/index.html
+++ b/index.html
@@ -10,10 +10,19 @@
 </head>
 <body>
     <div class="sidebar close">
-        <div class="logo">
+        <div class="home-content">
             <i class="fas fa-bars"></i>
-        </div>
+            <span class="menu-text">Menu</span>
+        </div>        
         <ul class="nav-list">
+            <li>
+            <ul class="sub-menu">
+                <li><a class="link-name">Hướng Dẫn Cơ Bản</a></li>
+                <li><a href="scriptaccess.html">Cách Truy Cập Script</a></li>
+                <li><a href="editscript.html">Cách Chỉnh Sửa Kịch Bản</a></li>
+            </ul>
+            </li>
+            
             <li>
             <div class="icon-link">
                 <a>
@@ -87,7 +96,7 @@
                 <li><a href="cloudsever.html">Quản Lí Máy Chủ Đám Mây</a></li>
             </ul>
             </li>
-  
+
             <li>
             <a href="#">
                 <i class="fas fa-heart"></i>
