--- a/scriptaccess.html
+++ b/scriptaccess.html
@@ -31,23 +31,23 @@
                 <div class="guide-steps">
                     <div class="guide-step">
                         <h4>Bước 1: Nhấp vào nút "Luật"</h4>
-                        <img src="huongdan.png" alt="Bước 1" width="80%" height="auto">
+                        <img src="picture/huongdan.png" alt="Bước 1" width="80%" height="auto">
                     </div>
                     <div class="guide-step">
                         <h4>Bước 2: Nhấp vào nút "Kịch Bản"</h4>
-                        <img src="huongdan2.png" alt="Bước 2" width="80%" height="auto">
+                        <img src="picture/huongdan2.png" alt="Bước 2" width="80%" height="auto">
                     </div>
                     <div class="guide-step">
                         <h4>Bước 3: Nhấp vào nút "Kịch Bản Mới"</h4>
-                        <img src="huongdan3.png" alt="Bước 3" width="80%" height="auto">
+                        <img src="picture/huongdan3.png" alt="Bước 3" width="80%" height="auto">
                     </div>
                     <div class="guide-step">
                         <h4>Bước 4: Xóa Script hiện tại bằng việc bấm vào nút</h4>
-                        <img src="huongdan5.png" alt="Bước 4" width="10%" height="auto">
+                        <img src="picture/huongdan5.png" alt="Bước 4" width="10%" height="auto">
                     </div>
                     <div class="guide-step">
                         <h4>Hoàn thành</h4>
-                        <img src="huongdan4.png" alt="Hoàn thành" width="80%" height="auto">
+                        <img src="picture/huongdan4.png" alt="Hoàn thành" width="80%" height="auto">
                     </div>
                 </div>
         </div>
